test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_procedure_local_extern_decl.draco
proc main() void : extern a() void; a := 0; corp;

