test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_elif_as_identifier.draco
int elif;
 
proc main() void : a := 1; corp;
